--- a/lang/avail2.json
+++ b/lang/avail2.json
@@ -10,5 +10,5 @@
 		{ "short" : "hu", "name" : "Magyar", "version" : 4 },
 		{ "short" : "sl1", "name" : "Slovenščina", "version" : 6 }
 	],
-  "eula_en_1" : "{\\rtf1\\ansi\\b1NiceHash QuickMiner\\b0\\line\\line{\\field{\\*\\fldinst HYPERLINK \"https://www.nicehash.com/\"}{\\fldrslt NiceHash}}}"
+  "eula_en_1" : "{\\rtf1\\ansi\\b1NiceHash QuickMiner\\b0\\line\\line{\\field{\\*\\fldinst HYPERLINK \"https://www.nicehash.com/\"}{\\fldrslt NiceHash}}\\line\\lineDo you accept the terms?}"
 }
