--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,4 +1,4 @@
-{	"version": 5,
+{	"version": 6,
 	"strings": [
 		["GEN00001","Выход"],
 		["GEN00002","OK"],
@@ -22,6 +22,8 @@
 		["INST0014","Невозможно запустить NiceHashQuickMiner.exe; ошибка:"],
 		["INST0015","был успешно установлен! Благодарим вас за вашу поддержку!"],
 		["INST0016","Примените ОПТИМИЗИРОВАТЬ (Легкий) для всех устройств"],
+		["INST0017","Принять"],
+		["INST0018","Отклонить"],
 
 		["PROG0001","NiceHash QuickMiner уже работает!"],
 		["PROG0002","Было обнаружено, что NiceHash QuickMiner привел к сбою вашего ПК."],
@@ -152,5 +154,6 @@
 		["UPDT0007","Доступна новая функция"],
 		["UPDT0008","NiceHash QuickMiner был успешно обновлен до v"],
 		["UPDT0009",".\n\nНовая версия может автоматически обнаруживать и выбирать лучшую локацию с очень высокой надежностью. В ней также есть автоматическое переключение на другую локацию в случае недоступности или технических работ на первой локации. Хотите включить функцию автоматического выбора локации сервиса?"],
-		["UPDT0010",".\n\nНовая версия увеличивает безопасность вашего майнинга. Для правильной работы, нам нужно модифицировать командную строку запуска Excavator. Нажмите Да, если согласны сбросить ее. Если вы ее не сбросите, NiceHash QuickMiner может не работать правильно."]
+		["UPDT0010",".\n\nНовая версия увеличивает безопасность вашего майнинга. Для правильной работы, нам нужно модифицировать командную строку запуска Excavator. Нажмите Да, если согласны сбросить ее. Если вы ее не сбросите, NiceHash QuickMiner может не работать правильно."],
+		["EULA0000","{\\rtf1\\ansi\\ansicpg1252\\deff0\\nouicompat\\deflang2057{\\fonttbl{\\f0\\fnil\\fcharset0 Calibri;}{\\f1\\fnil\\fcharset2 Symbol;}}{\\colortbl ;\\red0\\green0\\blue255;}{\\*\\generator Riched20 10.0.19041}\\viewkind4\\uc1 \\pard\\sa200\\sl276\\slmult1\\b\\f0\\fs28\\lang9 NiceHash QuickMiner - Лицензионное соглашение конечного пользователя\\b0\\fs22\\par Дорогой пользователь! Вы собираетесь начать использовать NiceHash QuickMiner:\\par\\pard{\\pntext\\f1\\'B7\\tab}{\\*\\pn\\pnlvlblt\\pnf1\\pnindent0{\\pntxtb\\'B7}}\\fi-360\\li720\\sa200\\sl276\\slmult1 Вы будете делиться вычислительной мощностью своего ПК и получать за это оплату в криптовалюте Биткоин (BTC).\\par{\\pntext\\f1\\'B7\\tab}Это может привести к сокращению срока службы батареи вашего устройства и к повышенному потреблению мощности.\\par\\pard\\sa200\\sl276\\slmult1 Как это работает: {{\\field{\\*\\fldinst{HYPERLINK https://www.nicehash.com }}{\\fldrslt{https://www.nicehash.com\\ul0\\cf0}}}}\\f0\\fs22\\par\\pard\\sa200\\sl276\\slmult1 Что из себя представляет криптовалюта: {{\\field{\\*\\fldinst{HYPERLINK https://en.wikipedia.org/wiki/Cryptocurrency }}{\\fldrslt{https://en.wikipedia.org/wiki/Cryptocurrency\\ul0\\cf0}}}}\\f0\\fs22\\par Принимаете ли вы условия?\\par}"]
 ]}
