--- a/lang/de.json
+++ b/lang/de.json
@@ -10,7 +10,7 @@
 		["INST0002","Möchten Sie diese Installation überschreiben?"],
 		["INST0003","Herunterladen und Installieren"],
 		["INST0004","Sprache:"],
-		["INST0005","Installationsordener:"],
+		["INST0005","Installationsordner:"],
 		["INST0006","Browsen"],
 		["INST0007","Versionstyp:"],
 		["INST0008","Eine Verknüpfung auf dem Desktop erstellen"],
@@ -24,9 +24,9 @@
 		["INST0016","OPTIMIERUNG (Lite) für alle Geräte anwenden"],
 
 		["PROG0001","Der NiceHash QuickMiner läuft bereits!"],
-		["PROG0002","Es wurde festgestellt, dass der NiceHash QuickMiner Ihren PC zum Absturtz gebracht hat."],
+		["PROG0002","Es wurde festgestellt, dass der NiceHash QuickMiner Ihren PC zum Absturz gebracht hat."],
 		["PROG0003","Möchten Sie alle OPTIMIERUNGS Profile für alle Grafikkarten auf den Standardwert (Manuell) zurücksetzen?"],
-		["PROG0004","Der NiceHash QuickMiner kann nicht gestartet werden.Fehler:\n\n - fehlende Dateien\n\nEinige Dateien wurden von einem Drittanbieterprogramm gelöscht - höchstwahrscheinlich AV."],
+		["PROG0004","Der NiceHash QuickMiner kann nicht gestartet werden. Fehler:\n\n - fehlende Dateien\n\nEinige Dateien wurden von einem Drittanbieterprogramm gelöscht - höchstwahrscheinlich AV."],
 		["PROG0005","Fehler bei der Installation!\n\n Der NiceHash QuickMiner konnte mit der Installation nicht fortfahren. Fehler:"],
 		["PROG0006","NVML kann nicht initialisiert werden.\n\nDer NiceHash QuickMiner funktioniert nicht ohne NVIDIA Geräte!"],
 		["PROG0007","NVIDIA Treiberversion konnte nicht abgerufen werden!"],
@@ -39,7 +39,7 @@
 		["FRM10004","Optionen anzeigen"],
 		["FRM10005","Über"],
 		["FRM10006","Protokolle exportieren"],
-		["FRM10007","Vollständige detailierte Protokollierung"],
+		["FRM10007","Vollständige detaillierte Protokollierung"],
 		["FRM10008","Anleitungen anzeigen"],
 		["FRM10009","Hilfe"],
 		["FRM10010","Mit Windows starten"],
@@ -63,26 +63,26 @@
 		["FRM10028","Fehler beim Starten von excavator.exe. Bitte konsultieren Sie die NiceHash QuickMiner Anleitung zur Fehlerbehebung."],
 		["FRM10029","Die Verbindung zu excavator.exe konnte nicht hergestellt werden. Bitte konsultieren Sie die NiceHash QuickMiner Anleitung zur Fehlerbehebung."],
 		["FRM10030","Excavator.exe wird gestoppt!"],
-		["FRM10031","Dieser PC verfügt nicht über genügend virtuellen Speicher. Erhöhen Sie den virtuellen Speicher oder fügen Sie mehr physichen RAM hinzu."],
+		["FRM10031","Dieser PC verfügt nicht über genügend virtuellen Speicher. Erhöhen Sie den virtuellen Speicher oder fügen Sie mehr physischen RAM hinzu."],
 		["FRM10040","Der Game Modus ist noch aktiv!\n\nMöchten Sie den NiceHash QuickMiner trotzdem beenden?"],
 		["FRM10041","Diese Aktion schließt den NiceHash QuickMiner.\n\nSind Sie sicher, dass Sie den NiceHash QuickMiner schließen möchten?"],
 		["FRM10042","Die Grafikkarte konnte mit dem angeschlossenen Display nicht erkannt werden oder Sie verwenden möglicherweise eine ältere Grafikkarte für die Anzeige!"],
 		["FRM10043","Der Game Modus ist auf der primären GPU mit Display aktiviert worden. Das Mining wurde auf dieser GPU gestoppt und Game Übertaktungen wurden dafür angewendet.\n\nSpielen Sie weiter!"],
-		["FRM10044","Der Game Modus ist auf der primären GPU mit Display deaktiviert worden. Die GPU kehrt mit angewandten Übertaktungen (wenn ein gestellt) zum Mining zurück."],
-		["FRM10050","Autostart task"],
-		["FRM10051","NiceHash QuickMiner Autostart task wurde deinstalliert."],
-		["FRM10052","Fehler beim deinstalliern des NiceHash QuickMiner Autostart tasks! Grund:"],
-		["FRM10053","NiceHash QuickMiner Autostart task wurde erfolgreich installiert.\n\nDer NiceHash QuickMiner wird jetzt in Betrieb genommen und startet automatisch das Mining, wenn Windows gestartet wird."],
-		["FRM10054","Fehler beim installiern des NiceHash QuickMiner Autostart tasks! Grund:"],
-		["FRM10060","Neustart des Excavators ist fehlgeschlagen! Bitte, starten Sie den NiceHash QuickMiner erneut, um das Problem zu beheben!"],
+		["FRM10044","Der Game Modus ist auf der primären GPU mit Display deaktiviert worden. Die GPU kehrt mit angewandten Übertaktungen (wenn eingestellt) zum Mining zurück."],
+		["FRM10050","Autostart Task"],
+		["FRM10051","NiceHash QuickMiner Autostart Task wurde deinstalliert."],
+		["FRM10052","Fehler beim Deinstallieren des NiceHash QuickMiner Autostart tasks! Grund:"],
+		["FRM10053","NiceHash QuickMiner Autostart Task wurde erfolgreich installiert.\n\nDer NiceHash QuickMiner wird jetzt in Betrieb genommen und startet automatisch das Mining, wenn Windows gestartet wird."],
+		["FRM10054","Fehler beim Installieren des NiceHash QuickMiner Autostart Tasks! Grund:"],
+		["FRM10060","Neustart von Excavators ist fehlgeschlagen! Bitte, starten Sie den NiceHash QuickMiner erneut, um das Problem zu beheben!"],
 		["FRM10061","Alles erledigt! Die Protokolle wurden in eine einzelne .zip Datei exportiert:"],
-		["FRM10062","Ihre Mining BTC Adresse wurde redigiert und es sind nur Protokolle der letzten 6 Stunden enthalten, um die Dateigroße zu veringern. Sie sollten diese Dtaei anhängen, wenn Sie ein Problem/Fehlerbericht senden."],
+		["FRM10062","Ihre Mining BTC Adresse wurde redigiert und es sind nur Protokolle der letzten 6 Stunden enthalten, um die Dateigroße zu verringern. Sie sollten diese Datei anhängen, wenn Sie ein Problem/Fehlerbericht senden."],
 		["FRM10063","Fehler beim Exportieren der Protokolle, Grund:"],
 		["FRM10064","Exportieren der Protokolldateien in eine ZIP Datei"],
-		["FRM10070","Optimieren Sie die Stabilität, indem Sie Message Signaled Interrupts (MSI) für alle unterstützten Grafikkarten aktivieren. Ihre Mininganlage kann eine deutlich verbesserte Stabilität erhalten.\n\nGEFAHR! In einigen seltenen Fällen kann diese Aktion Ihre Anzeigetreiber beschädigen. Es wird empfohlen vor der Aktivierung von MSI eine Systemwiederherstellung durchzuführen.\n\nMSI jetzt aktivieren?"],
+		["FRM10070","Optimieren Sie die Stabilität, indem Sie Message Signaled Interrupts (MSI) für alle unterstützten Grafikkarten aktivieren. Ihre Mininganlage kann eine deutlich verbesserte Stabilität erhalten.\n\nGEFAHR! In einigen seltenen Fällen kann diese Aktion Ihre Anzeigetreiber beschädigen. Es wird empfohlen vor der Aktivierung von MSI einen Systemwiederherstellungspunkt zu erstellen.\n\nMSI jetzt aktivieren?"],
 		["FRM10071","Aktion fehlgeschlagen, Fehler:"],
 		["FRM10072","Alle Grafikkarten wurden bereits optimiert!"],
-		["FRM10073","Erfolgreich! Bitte starten Sie Ihren PC erneut.\n\nFolgende Grafikkarten wurden optimiert:"],
+		["FRM10073","Erfolgreich! Bitte starten Sie Ihren PC neu.\n\nFolgende Grafikkarten wurden optimiert:"],
 		["FRM10101","Extra"],
 		["FRM10102","MSI interrupts anwenden"],
 		["FRM10103","MSI deaktiviert! Bitte, aktivieren Sie MSI für eine bessere Stabilität!"],
@@ -90,8 +90,8 @@
 		["FRM10301","Kann im Gamemodus nicht geändert werden.\n\nBitte deaktivieren Sie zuerst den Game Modus!"],
 
 		["FRM20001","Ungültige oder keine Mining Bitcoin Adresse wurde festgelegt. Bitte geben Sie Ihre NiceHash Mining Adresse ein:"],
-		["FRM20002","Clipboard einfügen"],
-		["FRM20003","geben Sie Ihre Mining Adresse hier ein"],
+		["FRM20002","Aus Zwischenablage einfügen"],
+		["FRM20003","Geben Sie Ihre Mining Adresse hier ein"],
 		["FRM20005","Sie wissen nicht, wo Sie sie bekommen können? Loggen Sie sich in Ihrem NiceHash Konto ein und gehen Sie dann zu dieser Seite:"],
 		["FRM20006","Ungültige BTC Address. Die eingegebene Adresse ist nicht korrekt."],
 
@@ -112,7 +112,7 @@
 		["ABT00001","Version:"],
 
 		["FRM90001","Optionale Einstellungen "],
-		["FRM90002","Lassen Sie uns die folgenden Einstellungen konfigurieren, die zwar nicht zwingend erforderlich sind, deren Konfigurierung jedoch empfohlen wird. Wenn Sie in Eile sind, können Sie dies überspringen und später über die Konfiguratiosdatei(nhqm.conf) konfigurieren."],
+		["FRM90002","Lassen Sie uns die folgenden Einstellungen konfigurieren, die zwar nicht zwingend erforderlich sind, deren Konfigurierung jedoch empfohlen wird. Wenn Sie in Eile sind, können Sie dies überspringen und später über die Konfigurationsdatei (nhqm.conf) konfigurieren."],
 		["FRM90003","Überspringen >>"],
 		["FRM90004","Sprache"],
 		["FRM90005","Name"],
@@ -125,31 +125,31 @@
 		["FRM90012","Arbeitername:"],
 		["FRM90013","Möchten Sie, dass der NiceHash QuickMiner automatisch mit Windows startet?"],
 		["FRM90014","Autostart mit Windows (Task Planer Methode)"],
-		["FRM90015","Wie händelt man den PC, wenn die Grafikkarte(n)abstürzt?"],
+		["FRM90015","Verhalten, wenn die Grafikkarte(n)abstürzt?"],
 		["FRM90016","Fehler Handlungsaktion:"],
 		["FRM90017","Tuen Sie nichts"],
-		["FRM90018","Excavator erneut starten(Standard)"],
-		["FRM90019","Neustart der Anlage(Empfohlen)"],
+		["FRM90018","Excavator erneut starten (Standard)"],
+		["FRM90019","Neustart der Anlage (Empfohlen)"],
 		["FRM90020","Neustart der NVIDIA Treiber"],
 		["FRM90021","Es gibt viele weitere Einstellungen, die Sie konfigurieren können. Durchsuchen Sie NiceHash QuickMiner Wiki nach Tipps und Tricks."],
-		["FRM90022","EMPFOHLEN! Vergessen Sie nicht die One - Click - Optimierungslösungen für Desktop Grafikkarten der GTX 1000 Serie, TITAN V, RTX 2000 Serie, TITAN RTX und RTX 3000 Serie anzusehen. Hohe Zuverlässigkeit und sehr gute Effizienz sind garantiert!"],
+		["FRM90022","EMPFOHLEN! Vergessen Sie nicht die One-Click Optimierungslösungen für Desktop Grafikkarten der GTX 1000 Serie, TITAN V, RTX 2000 Serie, TITAN RTX und RTX 3000 Serie anzusehen. Hohe Zuverlässigkeit und sehr gute Effizienz sind garantiert!"],
 		["FRM90023","Wenn Sie ein Anfänger sind, empfehlen wir Ihnen jetzt zum Anlageverwalter zu gehen. Wenn Sie Ihre Grafikkarte(n) manuell abstimmen möchten, gehen Sie zur nächsten Seite."],
 		["FRM90024","Bring mich zum Anlageverwalter >>"],
 		["FRM90025","Es kann einige Minuten dauern, bis Ihr Miner im Anlageverwalter angezeigt wird. Bitte, haben Sie etwas Geduld!"],
-		["FRM90026","OCTune ist ein leistungsstarkes Übertaktungstool, entwickelt, um alle Bedürfnisse jedes einzelnen Miners abzudecken. Es ist leistungsfähig genug, um Modifikationen von core clocks, memory clocks, und Leistungsbegrenzungen zu unterstützen, es hat die Fähigkeit, das Verhalten der Lüfter zu modifizieren und erlaubt Ihnen Grafikkarten zu untertakten, um den Stromverbrauch zu reduzieren und die Effizienz zu erhöhen. Schalten Sie jedes andere Übertaktungstool aus und lassen Sie OCTune die volle Kontrolle übernehmen!"],
+		["FRM90026","OCTune ist ein leistungsstarkes Übertaktungstool, entwickelt, um alle Bedürfnisse jedes einzelnen Miners abzudecken. Es ist leistungsfähig genug, um Modifikationen von core clocks, memory clocks, und Leistungsbegrenzungen zu unterstützen. Es kann außerdem das Verhalten der Lüfter modifizieren und erlaubt Ihnen Grafikkarten zu untertakten, um den Stromverbrauch zu reduzieren und die Effizienz zu erhöhen. Schalten Sie jedes andere Übertaktungstool aus und lassen Sie OCTune die volle Kontrolle übernehmen!"],
 		["FRM90027","OCTune zum Optimieren öffnen >>"],
 
 		["F0100001","Automatischer Start in Kürze..."],
-		["F0100002","OPTIMIEREN Zurücksetzten"],
+		["F0100002","OPTIMIEREN zurücksetzen"],
 		["F0100003","Start"],
-		["F0100004","Sie können die Optimierung zurücksetzten, bevor sie angewendet wird, um einen PC Absturz aufgrund eines inkompatiblen Optimierungsprofils zu vermeiden."],
+		["F0100004","Sie können die Optimierung zurücksetzen, bevor sie angewendet wird, um einen PC Absturz aufgrund eines inkompatiblen Optimierungsprofils zu vermeiden."],
 
 		["UPDT0001","Neue Version verfügbar"],
 		["UPDT0002","NiceHash QuickMiner v"],
 		["UPDT0003"," ist verfügbar.\n\nMöchten Sie jetzt aktualisieren?"],
 		["UPDT0004","Neue Version wurde heruntergeladen"],
 		["UPDT0005","NiceHash QuickMiner v"],
-		["UPDT0006"," wurde heruntergeladen.\n\nDer NiceHash QuickMiner muss erneut gestartet werden, damit die Aktualisierung abgeschlossen werden kann. Klicken Sie auf OK, wenn Sie bereit sind ihn neu zu starten. Es wird empfohlen, die Einstellungen nach der Aktualisierung zu überprüfem, um sicherzustellen, dass der NiceHash QuickMiner wie erwartet läuft."],
+		["UPDT0006"," wurde heruntergeladen.\n\nDer NiceHash QuickMiner muss erneut gestartet werden, damit die Aktualisierung abgeschlossen werden kann. Klicken Sie auf OK, wenn Sie bereit sind ihn neu zu starten. Es wird empfohlen, die Einstellungen nach der Aktualisierung zu überprüfen, um sicherzustellen, dass der NiceHash QuickMiner wie erwartet läuft."],
 		["UPDT0007","Neue Funktion verfügbar"],
 		["UPDT0008"," Der NiceHash QuickMiner wurde erfolgreich auf v aktualisiert"],
 		["UPDT0009",".\n\nDie neue Version kann automatisch den besten Servicestandort mit sehr hoher Zuverlässigkeit erkennen. Sie verfügt außerdem über einen automatischen Fallback zum sekundären Standort, wenn es einen Ausfall oder eine Wartung beim primären Standort gibt. Möchten Sie die Funktion zur automatischen Ermittlung des Servicestandortes aktivieren?"],
