--- a/lang/es.json
+++ b/lang/es.json
@@ -54,7 +54,7 @@
 		["FRM10019","Abrir"],
 		["FRM10020","Desactivar"],
 		["FRM10021","Comenzar"],
-		["FRM10022","Deterner"],
+		["FRM10022","Detener"],
 		["FRM10023","La actualización a la nueva versión falló, motivo:"],
 		["FRM10024","Por favor, resuelva los problemas o actualice manualmente."],
 		["FRM10025","notificación"],
