--- a/lang/1/fr.json
+++ b/lang/1/fr.json
@@ -4,7 +4,7 @@
 		["GEN00002","OK"],
 		["GEN00003","Annuler"],
 		["GEN00004","STABLE"],
-		["GEN00005","LC (Libérer le Candidat)"],
+		["GEN00005","RC (version d'évaluation)"],
 
 		["INST0001","NiceHash QuickMiner est déjà installé dans:"],
 		["INST0002","Souhaitez vous écraser cette installation?"],
@@ -43,14 +43,14 @@
 		["FRM10008","Voir Manuels"],
 		["FRM10009","Aide"],
 		["FRM10010","Commencer avec windows"],
-		["FRM10011","CPU Minière"],
+		["FRM10011","Mineur CPU"],
 		["FRM10012","Modifier le fichier de commande"],
 		["FRM10013","Modifier fichier config"],
 		["FRM10014","Paramètres"],
 		["FRM10015","Configurer"],
 		["FRM10016","Activer"],
 		["FRM10017","Mode de jeu"],
-		["FRM10018","Commencer minière"],
+		["FRM10018","Commencer le minage"],
 		["FRM10019","Ouvrez"],
 		["FRM10020","Désactiver"],
 		["FRM10021","Démarrer"],
@@ -58,7 +58,7 @@
 		["FRM10023","Mise à jour vers nouvelle version a échoué, raison:"],
 		["FRM10024","Veuillez, résoudre les problèmes ou mettre à jour manuellement."],
 		["FRM10025","Notification"],
-		["FRM10026","Excavator.exe a commencé minière avec succès!"],
+		["FRM10026","Excavator.exe a commencé le minage avec succès!"],
 		["FRM10027","Vitesse"],
 		["FRM10028","Échec du démarrage excavator.exe. Veuillez consulter NiceHash QuickMiner guide de dépannage."],
 		["FRM10029","Échec de l'établissement de la connexion à excavator.exe. Veuillez consulter NiceHash QuickMiner guide de dépannage."],
@@ -68,18 +68,18 @@
 		["FRM10041","Cette action se fermera NiceHash QuickMiner.\n\nÊtes-vous sûr de vouloir quitter NiceHash QuickMiner?"],
 		["FRM10042","Impossible de détecter la carte vidéo avec l'écran connecté ou vous utilisez peut-être une ancienne carte vidéo pour l'affichage!"],
 		["FRM10043","Mode jeu activé sur le GPU principal avec affichage. Le minage s'est arrêtée sur ce GPU et des overclockings de jeu ont été appliqués pour cela.\n\nJeu activé!"],
-		["FRM10044","Mode de jeu désactivé sur le GPU principal avec écran. Le GPU est de retour à minière avec des overclocks miniers appliqués (s'il est réglé)."],
+		["FRM10044","Mode de jeu désactivé sur le GPU principal avec écran. Le GPU a recommencer à miner avec des overclocks miniers appliqués (s'il est réglé)."],
 		["FRM10050","Tâche de démarrage automatique"],
 		["FRM10051","NiceHash QuickMiner la tâche de démarrage automatique a été désinstallée."],
 		["FRM10052","Échec de la désinstallation NiceHash QuickMiner tâche de démarrage automatique! Raison:"],
-		["FRM10053","NiceHash QuickMiner tâche de démarrage automatique a été installée avec succès.\n\nNiceHash QuickMiner va maintenant lancer et démarrer minière automatiquement au démarrage de Windows."],
+		["FRM10053","NiceHash QuickMiner tâche de démarrage automatique a été installée avec succès.\n\nNiceHash QuickMiner va maintenant lancer et démarrer le minage automatiquement au démarrage de Windows."],
 		["FRM10054","Échec de l'installation NiceHash QuickMiner tâche de démarrage automatique! Raison:"],
 		["FRM10060","Échec du redémarrage Excavator! Veuillez, redémarrez NiceHash QuickMiner pour résoudre ce problème!"],
 		["FRM10061","Tout est fait! Les Logs ont été exportés dans un seul fichier .zip:"],
-		["FRM10062","Votre adresse BTC minière a été expurgée et seules les 6 dernières heures de journaux sont incluses pour réduire la taille du fichier. Vous devez joindre ce fichier lors de la soumission d'un rapport de problème/bogue."],
+		["FRM10062","Votre adresse BTC de minage a été expurgée et seules les 6 dernières heures de journaux sont incluses pour réduire la taille du fichier. Vous devez joindre ce fichier lors de la soumission d'un rapport de problème/bogue."],
 		["FRM10063","Échec de l'exportation des logs, raison:"],
 		["FRM10064","Exporter les fichiers log dans un fichier ZIP"],
-		["FRM10070","Optimiser la stabilité en activant les interruptions signalées par message (MSI) pour toutes les cartes vidéo prises en charge. Votre rig minière peut obtenir une stabilité considérablement améliorée.\n\nDANGER! Dans certains cas rares, cette action peut endommager vos pilotes d'affichage. Il est recommandé d'effectuer une restauration du système avant d'activer MSI.\n\nActivez MSI maintenant?"],
+		["FRM10070","Optimiser la stabilité en activant les interruptions signalées par message (MSI) pour toutes les cartes vidéo prises en charge. Votre mineur peut obtenir une stabilité considérablement améliorée.\n\nDANGER! Dans certains cas rares, cette action peut endommager vos pilotes d'affichage. Il est recommandé d'effectuer une restauration du système avant d'activer MSI.\n\nActivez MSI maintenant?"],
 		["FRM10071","Action échoué, erreur:"],
 		["FRM10072","Toutes les cartes vidéo sont déjà optimisées!"],
 		["FRM10073","Succès! Veuillez, redémarrez votre PC.\n\nLes cartes vidéo suivantes ont été optimisées:"],
@@ -89,9 +89,9 @@
 		["FRM10201","Chargement terminé!"],
 		["FRM10301","Impossible de changer pendant le mode de jeu.\n\nVeuillez, d'abord désactiver le mode Jeu!"],
 
-		["FRM20001","Invalide ou pas d'adresse Bitcoin minière situé. Veuillez saisir votre adresse NiceHash minière:"],
+		["FRM20001","Invalide ou pas d'adresse Bitcoin de minage situé. Veuillez saisir votre adresse de minage NiceHash:"],
 		["FRM20002","Presse-papiers coller"],
-		["FRM20003","Entrez votre adresse minière ici"],
+		["FRM20003","Entrez votre adresse de minage ici"],
 		["FRM20005","Je ne sais pas où l'obtenir? Connectez-vous à votre compte NiceHash puis allez sur cette page:"],
 		["FRM20006","Adresse BTC invalide. L'adresse saisie n'est pas correcte."],
 
@@ -121,7 +121,7 @@
 		["FRM90008","Conseils & Astuces"],
 		["FRM90009","Gestionnaire de Rig"],
 		["FRM90010","Langue de l'interface"],
-		["FRM90011","Donnez à votre rig minière un nom unique et cool!"],
+		["FRM90011","Donnez à votre mineur un nom unique et cool!"],
 		["FRM90012","Nom du travailleur:"],
 		["FRM90013","Souhaitez-vous que NiceHash QuickMiner démarrer automatiquement avec Windows?"],
 		["FRM90014","Démarrage automatique avec Windows (Méthode planificateur de tâches)"],
@@ -153,5 +153,5 @@
 		["UPDT0007","Nouvelle fonctionnalité disponible"],
 		["UPDT0008","NiceHash QuickMiner a été mis à jour avec succès vers v"],
 		["UPDT0009",".\n\nLa nouvelle version peut détecter automatiquement et choisissez le meilleur emplacement de service avec une fiabilité très élevée. Il dispose également d'un retour automatique vers l'emplacement secondaire en cas de panne ou entretien à l'emplacement principal. Souhaitez-vous activer la fonction de localisation automatique du service?"],
-		["UPDT0010",".\n\nLa nouvelle version augmente la sécurité de votre minière. Pour que cela fonctionne correctement, nous avons dû modifier la ligne de commande de lancement d'Excavator.Cliquez sur Oui si vous acceptez de le réinitialiser. Si vous ne le réinitialisez pas, NiceHash QuickMiner peut ne pas fonctionner correctement."]
+		["UPDT0010",".\n\nLa nouvelle version augmente la sécurité de votre mineur. Pour que cela fonctionne correctement, nous avons dû modifier la ligne de commande de lancement d'Excavator.Cliquez sur Oui si vous acceptez de le réinitialiser. Si vous ne le réinitialisez pas, NiceHash QuickMiner peut ne pas fonctionner correctement."]
 ]}
