--- a/lang/test/ru.json
+++ b/lang/test/ru.json
@@ -131,11 +131,11 @@
     ],
     [
       "FRM10001",
-      "ВАЖНО! Вы можете управлять NiceHash QuickMiner через контекстное меню. Нажмите правой кнопкой мыши на значке NiceHash в области уведомлений Windows. Смотрите пример на следующем изображении:"
+      "ВАЖНО! Вы можете управлять NiceHash QuickMiner через контекстное меню. Нажмите правой кнопкой мыши на значке NiceHash в области уведомлений Windows, как это показано на примере ниже:"
     ],
     [
       "FRM10002",
-      "Хорошо, я протестировал и понял это! Закрыть это окно."
+      "Отлично, все понятно! Закрыть это окно."
     ],
     [
       "FRM10003",
@@ -147,7 +147,7 @@
     ],
     [
       "FRM10074",
-      "Показать главную форму"
+      "Показать главное окно"
     ],
     [
       "FRM10005",
@@ -159,7 +159,7 @@
     ],
     [
       "FRM10007",
-      "Полное подробное логирование"
+      "Полное логирование"
     ],
     [
       "FRM10008",
@@ -171,7 +171,7 @@
     ],
     [
       "FRM10010",
-      "Запуск с Windows"
+      "Автозапуск при загрузке Windows"
     ],
     [
       "FRM10011",
@@ -179,7 +179,7 @@
     ],
     [
       "FRM10012",
-      "Редактировать командный файл"
+      "Редактировать исполняемый файл"
     ],
     [
       "FRM10013",
@@ -375,7 +375,7 @@
     ],
     [
       "FRM20007",
-      "Запуск майнинга автоматически"
+      "Запускать майнинг автоматически"
     ],
     [
       "FRM20008",
@@ -391,7 +391,7 @@
     ],
     [
       "FRM20011",
-      "Не показывать этот экран снова"
+      "Не показывать больше это окно"
     ],
     [
       "UINS0001",
@@ -455,7 +455,7 @@
     ],
     [
       "FRM90003",
-      "Пропуск >>"
+      "Пропустить >>"
     ],
     [
       "FRM90004",
@@ -487,7 +487,7 @@
     ],
     [
       "FRM90011",
-      "Дайте своему ригу для майнинга уникальное и классное имя!"
+      "Придумайте уникальное и необычное имя для своего майнинг рига!"
     ],
     [
       "FRM90012",
@@ -495,15 +495,15 @@
     ],
     [
       "FRM90013",
-      "Хотите, чтобы NiceHash QuickMiner автоматически запускался с Windows?"
+      "Хотите, чтобы NiceHash QuickMiner автоматически запускался при загрузке Windows?"
     ],
     [
       "FRM90014",
-      "Автозапуск с Windows (метод планировки заданий)"
+      "Автозапуск при загрузке Windows (через Планировщик заданий)"
     ],
     [
       "FRM90015",
-      "Что делать с компьютером, когда происходит сбой видеокарт?"
+      "Что будем делать в случае сбоя видеокарт?"
     ],
     [
       "FRM90016",
@@ -527,15 +527,15 @@
     ],
     [
       "FRM90021",
-      "Можно сконфигурировать множество других настроек. Проверьте советы и подсказки в NiceHash QuickMiner Wiki."
+      "Другие доступные настройки, а также полезные рекомендации и советы, вы можете найти в нашей базе знаний NiceHash QuickMiner."
     ],
     [
       "FRM90022",
-      "РЕКОМЕНДУЕТСЯ! Не забудьте проверить решение оптимизации в одно нажатие для настольных видеокарт серии GTX 1000, TITAN V, серии RTX 2000, TITAN RTX и серии RTX 3000. Высокая надежность и очень хорошая эффективность гарантированы!"
+      "РЕКОМЕНДУЕМ! Попробуйте использовать оптимизацию \"в один клик\" для десктопных видеокарт серии GTX 1000, TITAN V, TITAN RTX, а также серий RTX 2000 и RTX 3000. Надежность и высокая эффективность гарантированы!"
     ],
     [
       "FRM90023",
-      "Если вы новичок, рекомендуем вам сейчас перейти в Менеджер ригов. Если хотите вручную настроить видеокарты, перейдите на след. страницу."
+      "Если вы новичок, рекомендуем на этом шаге перейти в Менеджер ригов. Чтобы настроить видеокарты вручную, перейдите на следующую страницу."
     ],
     [
       "FRM90024",
@@ -543,19 +543,19 @@
     ],
     [
       "FRM90025",
-      "Перед тем, как майнер появится в Менеджере ригов, может пройти неск. минут. Пожалуйста, будьте терпеливы!"
+      "Прежде чем майнер появится в Менеджере ригов, может пройти несколько минут. Пожалуйста, будьте терпеливы!"
     ],
     [
       "FRM90026",
-      "OCTune — мощный инструмент для разгона. Он достаточно мощный для поддержки модификации частот ядра, памяти, ограничения мощности, управления поведением вентиляторов и выполнения андервольтинга для снижения потребления мощности и увеличения эффективности. Отключите другие инструменты и позвольте OCTune взять на себя полное управление!"
+      "OCTune — мощный инструмент для разгона. Он поддерживает модификацию частот ядра и памяти, ограничений питания, управляет вентиляторами и способен выполнять андервольтинг для снижения потребления мощности и увеличения эффективности. Отключите другие инструменты разгона и используйте для этого OCTune!"
     ],
     [
       "FRM90027",
-      "Откройте OCTune для настройки >>"
+      "Открыть OCTune для настройки >>"
     ],
     [
       "FRM90028",
-      "Запуск майнинга автоматически при запуске QuickMiner"
+      "Автозапуск майнинга при старте QuickMiner"
     ],
     [
       "F0100001",
@@ -579,7 +579,7 @@
     ],
     [
       "F0121001",
-      "Остановка майнинга"
+      "Остановить майнинг"
     ],
     [
       "F0120002",
