--- a/lang/1/ja.json
+++ b/lang/1/ja.json
@@ -123,7 +123,7 @@
     ],
     [
       "PROG0008",
-      "NVIDIAドライバーはバージョン470.05以降が必要です。\n\n最新版をインストールしてください。"
+      "NVIDIAドライバーはバージョン511.09.以降が必要です。\n\n最新版をインストールしてください。"
     ],
     [
       "PROG0009",
